--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
     @media only screen and (max-width:$cut) {
-        padding-top: 2rem;
+        padding-top: 0.5rem;
         padding-bottom: .5rem;
     }
 
